<resources>
    <string name="app_name">Expense Manager</string>
    <string name="next">Next</string>
    <string name="discover">Discover</string>
    <string name="shop">Shop</string>
    <string name="offers">Offers</string>
    <string name="rewards">Rewards</string>
    <string name="discover_text">Look for things around you</string>
    <string name="shop_text"><![CDATA[Get the best deals & Coupons]]></string>
    <string name="offers_text">Find great offers while you discover</string>
    <string name="rewards_text"><![CDATA[Free recharge coupons & more]]></string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">ImageView\n</string>
    <string name="viewpager">ViewPager</string>
    <string name="tablayout">TabLayout</string>
    <string name="previous">previous</string>
    <string name="hello_welcome_to_expense_manager">Hello, Welcome to Expense Manager</string>
    <string name="login_account">LOGIN ACCOUNT</string>
    <string name="sign_in">Sign In</string>
    <string name="manage_your_expenses">Manage Your Expenses</string>
    <string name="flawlessly_amp_intimately"><![CDATA[flawlessly & intimately]]></string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="continue_as_guest">Skip for now</string>
    <string name="profile_picture">Profile picture</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="guest">Guest User</string>
    <string name="fab">FAB</string>
    <string name="stats">statistics</string>
    <string name="account">Accounts</string>
    <string name="budget">Budgets</string>
    <string name="home">Home</string>
    <string name="cancel">Cancle</string>
    <string name="save">Save</string>
    <string name="add_transaction">Add transaction</string>
    <string name="expense">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="income">Income</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="amount">Amount</string>
    <string name="calculator">Calculator</string>
</resources>