<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    tools:context=".IntroSlider">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pagerIntroSlider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/viewpager"
        android:layout_above="@id/tabs" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_above="@+id/startButton"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:background="@color/dark_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tablayout"
        app:tabBackground="@drawable/slider_dot_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startButton"
        android:layout_alignParentBottom="true">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_previous"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:visibility="gone"
            app:rippleColor="@color/dark_blue"
            android:contentDescription="@string/previous"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/previous"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_get_started"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:visibility="gone"
                android:textSize="15dp"
                android:text="@string/get_started"
                android:contentDescription="@string/get_started"
                android:background="@drawable/ripple_button"
                android:textColor="@color/white" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:contentDescription="@string/next"
            android:gravity="end"
            app:rippleColor="@color/dark_blue"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/next"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

    </RelativeLayout>
</RelativeLayout>







































    <!--    <?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@color/dark_blue"-->
    <!--tools:context=".MainActivity">-->

    <!--<androidx.viewpager.widget.ViewPager-->
    <!--    android:id="@+id/pagerIntroSlider"-->
    <!--    android:layout_width="0dp"-->
    <!--    android:layout_height="0dp"-->
    <!--    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--    app:layout_constraintEnd_toEndOf="parent"-->
    <!--    app:layout_constraintHorizontal_bias="0.0"-->
    <!--    app:layout_constraintStart_toStartOf="parent"-->
    <!--    app:layout_constraintTop_toTopOf="parent"-->
    <!--    app:layout_constraintVertical_bias="1.0"-->
    <!--    />-->

    <!--<com.google.android.material.tabs.TabLayout-->
    <!--    android:id="@+id/tabs"-->
    <!--    android:background="@color/blue_darkest"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:layout_marginBottom="8dp"-->
    <!--    app:layout_constraintBottom_toTopOf="@+id/button"-->
    <!--    app:layout_constraintEnd_toEndOf="parent"-->
    <!--    app:layout_constraintStart_toStartOf="parent"-->
    <!--    app:tabBackground="@drawable/slider_dot_selector"-->
    <!--    app:tabGravity="center"-->
    <!--    app:tabIndicatorHeight="0dp"-->
    <!--    />-->

    <!--<Button-->
    <!--    android:id="@+id/button"-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:text=">"-->
    <!--    android:background="@drawable/round_button"-->
    <!--    android:textColor="@color/white"-->
    <!--    app:layout_constraintBottom_toBottomOf="parent" />-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->